# DEDS

./: README.md  pyproject.toml
DEDS Portfolio/NN/: NN ai gemaken.py
DEDS Portfolio/Supervised learning/: Classificatie.py
DEDS Portfolio/Unsupervised learning/: ja.ipynb
DEDS Portfolio/Week 17 & 18/: Les_2.py  Les_3.py  Read.py  kentekens1000.txt
DEDS Portfolio/week1/Data/Exports/: country.xlsx  order_details.xlsx  order_header.xlsx  order_method.xlsx  product.xlsx  product_line.xlsx  product_type.xlsx  retailer_site.xlsx  return_reason.xlsx  returned_item.xlsx  sales_branch.xlsx  sales_staff.xlsx
DEDS Portfolio/week1/Data/Vragen/: vraag5.xlsx  vraag6.xlsx  vraag7.xlsx  vraag8.xlsx  vraag9.xlsx
DEDS Portfolio/week1/Opdrachten/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1a_Opdrachten.py  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.py  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.py  data_processing.py  main.py  script.py  settings.py
DEDS Portfolio/week2/: Database overzetten.py  database  leuk
DEDS Portfolio/week3/: Database overzetten2.py  Order method toevoegen.py
src/deds/: export.py
